# binary_turk

./: Cargo.toml  LICENSE.md  README.md
game/: Cargo.toml
game/src/: castle.rs  color.rs  lib.rs  moves.rs  piece.rs  square.rs
game/src/pos/: bitboard.rs  board.rs  eval.rs  fen.rs  hash.rs  legal.rs  make_move.rs  mod.rs  noisy.rs  psudo_legal.rs
search/: Cargo.toml
search/src/: depth_limited_search.rs  iterated_deepening.rs  lib.rs  negamax.rs  start.rs  transposition_table.rs  types.rs
src/: eval.rs  main.rs  state.rs  types.rs
src/game/: bitboard.rs  board.rs  castle.rs  color.rs  fen.rs  gen.rs  legal.rs  make_move.rs  mate.rs  mod.rs  moves.rs  piece.rs  pos.rs  square.rs  tests.rs  time.rs
src/game/pos/: bitboard.rs  board.rs  fen.rs  legal.rs  make_move.rs  mate.rs  mod.rs  psudo_legal.rs
src/search/: depth_limited_search.rs  mod.rs  negamax.rs  send_info.rs  start.rs  types.rs
src/state/: mod.rs
src/timer/: control.rs  mod.rs  types.rs
src/uci/: cmd.rs  command.rs  input.rs  mod.rs  mode.rs  output.rs  parse.rs  process.rs  start.rs  state.rs  types.rs
src/uci/process/: go_param.rs  mod.rs  pos.rs  time_start.rs
src/uci/state/: mod.rs  mode.rs
src/uci/types/: mod.rs  options.rs  param.rs
timer/: Cargo.toml
timer/src/: control.rs  lib.rs
types/: Cargo.toml
uci/: Cargo.toml
uci/src/: input.rs  lib.rs  output.rs  parse.rs  start.rs
uci/src/process/: go_param.rs  mod.rs  pos.rs  time_start.rs
uci/src/state/: mod.rs
uci/src/types/: mod.rs  options.rs  param.rs
