[package]

name = "uci"
version = "0.0.1"
authors = ["Theemathas Chirananthavat <theemathas@gmail.com>"]

[dependencies]
time = "*"
log = "*"

[dependencies.types]
path = "../types"

[dependencies.game]
path = "../game"

[dependencies.search]
path = "../search"

[dependencies.timer]
path = "../timer"
